<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayersActivity">


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_players"
              android:id="@+id/title"
              style="@style/TitleText"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toTopOf="@id/playerArea"
              android:layout_marginBottom="@dimen/default_margin"
    />

    <Button
            style="@style/MenuButtonStyle"
            android:text="@string/back"
            android:id="@+id/backButton"
            app:layout_constraintLeft_toLeftOf="@+id/playerArea"
            app:layout_constraintTop_toBottomOf="@id/playerArea"/>
    <Button
            style="@style/MenuButtonStyle"
            android:text="@string/play"
            android:id="@+id/playButton"
            app:layout_constraintRight_toRightOf="@+id/playerArea"
            app:layout_constraintTop_toBottomOf="@id/playerArea"/>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/rounded_corners"
                  android:padding="@dimen/default_padding"
                  android:id="@+id/playerArea"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/colorMenuButton"
                      android:id="@+id/playerIcons"
        />

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/colorMenuButton"
                      android:id="@+id/playerNames"
        />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>