...
              android:textSize="@dimen/menu_game_title"
              android:textColor="#000"
              android:layout_marginBottom="@dimen/double_margin"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
    />


    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/buttonsLayout"
...
