<resources>
    <string name="app_name">Carcassonne Custom Clone</string>
    <string name="game_title">Carcassonne</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="title_rules">Rules</string>
    <string name="title_info">About</string>
    <string name="title_players">Choose players</string>
...
